resources/app-sre/visual-qontract-stage/visual-qontract.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: visual-qontract
  name: visual-qontract
spec:
  host: visual-app-interface.stage.devshift.net
  to:
    kind: Service
    name: oauth2-proxy
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
